<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.alhumdulillah.woocommerce.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.alhumdulillah.woocommerce.ui.gallery.GalleryFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_reward"
        android:name="com.alhumdulillah.woocommerce.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_reward"
        tools:layout="@layout/fragment_slideshow" />
</navigation>