<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ResetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/forgetImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_forget">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="#3EB255"
            android:background="@android:color/transparent"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_worry_we_have_just_need_your_n_registered_email_address_and_it_s_done"
            android:textColor="#F56920"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center">
        </TextView>

        <EditText
            android:id="@+id/forgetEmailVerificationId"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:theme="@style/RedProgressBar"
            android:hint="@string/provide_your_registered_email_here"
            android:backgroundTint="#350202">
        </EditText>

        <LinearLayout
            android:id="@+id/forgotPasswordContainerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/forgotEmailIconId"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_mail"
                android:layout_gravity="center">
            </ImageView>

            <TextView
                android:id="@+id/forgetEmailTextId"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/recovery_email_sent_successful_check_your_inbox"
                android:textColor="#11A10C">
            </TextView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgetEmailPasswordProgressBarId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RedProgressBar"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="482dp">
        </ProgressBar>

        <Button
            android:id="@+id/forgetPasswordButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/reset_password"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="#50ffffff"
            android:theme="@style/RedProgressBar"
            android:background="@color/btnRed">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/check_your_inbox_after_clicking_the_button_above">
        </TextView>

        <TextView
            android:id="@+id/forgetGoBackId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/purple_500"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="&lt; &lt; Go Back">
        </TextView>

    </LinearLayout>

</FrameLayout>